@@ -1,0 +1,9 @@
+package hamt_go
+
+type Entry32I interface {
+	IsLeaf() bool
+}
+
+type Entry64I interface {
+	IsLeaf() bool
+}
