@@ -1,0 +1,9 @@
+package hamt_go
+
+type HAMT32 struct {
+	root Entry32I
+}
+
+type HAMT64 struct {
+	root Entry64I
+}
